--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
 <head>
 	<title>The Menu</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 
 
 
-<h1  style="text-align-last:center;">
+<h1>
 <img src="icon1.jpg"width="50"; height="70">
 	Sinigang
 <img src="icon2.jpg"width="50"; height="70">
@@ -15,14 +16,20 @@
 <p>
 	Sinigang is a classic Filipino soup characterized by its sour and savory medley of flavors. It's popular comfort food in the Philippines, usually served on its own or paired with steamed rice on rainy days to ward off the cold. Like adobo, the term sinigang describes a cooking method more than a particular dish, as it has many variations. It can be made with protein such as pork, fish, shrimp, beef, and chicken and souring agents such as tamarind, guava, green mango, calamansi, kamias, batuan, santol, and other native fruits. A mix of tender meat, fresh spinach, string beans, and tomatoes, as well as a dash (or more) of savory fish sauce, make for the perfect combination in simmering and incorporating each unique flavor with each other. Powerful and poignant, sinigang is a Filipino native, through and through. Its name, sinigang, originates from the Tagalog verb that directly translates to “to stew” — sigang! Because of its Tagalog name, many presume it to be Tagalog in origin as well. This yummy meal has relatives in other regions in the country as well, to be sure — yet none are quite like this classic soup that many have fallen in love with. Again, sinigang isn’t a dish so much as it is a cooking method. This is why, like we mentioned earlier, there are a wide number of variations of this delicious dish! These include your sinigang na hipon, a favorite seafood variant. Here, tender and fresh shrimp soak up all the vibrant flavors of your beloved stew. It’s important to keep your shrimp perfectly cooked, so it’s much easier to peel the skin off later on.
 </p>
+
+<dl>	
 <h2> Ingredients </h2>
+
 <dt><b> Pork </b></dt> 
+
 <dd>-while you can use meatier and leaner parts such as pork shoulder (kasim), I recommend bony cuts such as spare ribs, pork belly with ribs, hocks, knuckles, and tailbone or neck bones for better flavor.</dd>
 
 <dt><b>Tomatoes</b></dt> 
+
 <dd>-use ripe, juicy tomatoes</dd>
 
 <dt><b>Onion</b></dt> 
+
 <dd>-peeled and quartered</dd>
 
 <dt><b>Fish sauce</b></dt>
@@ -47,7 +54,7 @@ kangkong (water spinach) and pechay</dd>
 <dd>-adds a mild heat; optional and can be omitted</dd>
 
 <h2> Prepare </h2>
- 
+ </dl>
  <ul>
 <li>2 pounds pork spare ribs, cut into 2-inch pieces</li>
 <li>8 cups water</li>
@@ -80,12 +87,14 @@ adding more water as necessary to maintain about 8 cups.</li>
 <li>Add bok choy and continue to cook for about 1 minute. Serve hot.</li>
 </ol>
 
-<h1 style="text-align-last:center;">
+<h1>
 <img src="sig1.jpg"width="600"; height="700">
 
 </h1>
+<h4>
+<a href="Source: https://www.kawalingpinoy.com">Source: https://www.kawalingpinoy.com/sinigang na baboy</a>
+</h4>
 <p>
-<a href="Source: https://www.kawalingpinoy.com">sinigang-na-baboy</a>
 </p>
 </body>
 </html>
